# engine

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  Makefile  README.md  RUST_REVIEW.md  SECURITY.md  comment_fix.patch  deny.toml  docker-compose.yml  fix_fmt.sh  format.patch  install.sh  patch_evaluator.sh  patch_fmt.diff  patch_signals.sh  pnpm-lock.yaml  pnpm-workspace.yaml  scheduler_comment_fix.patch  temp_evaluator.rs  temp_signals.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: expression.rs  template.rs
orch8/: Cargo.toml
orch8-api/: Cargo.toml
orch8-api/src/: api_keys.rs  approvals.rs  auth.rs  circuit_breakers.rs  cluster.rs  continuity.rs  credentials.rs  cron.rs  dataflow.rs  diagnosis.rs  dlq_groups.rs  error.rs  events.rs  health.rs  input_schema.rs  inspect.rs  instances.rs  instances.rs.orig  lib.rs  mcp_server.rs  metrics.rs  mobile_sync.rs  model_pricing.rs  openapi.rs  plugins.rs  pools.rs  preflight.rs  queue_dispatch.rs  queue_routing.rs  releases.rs  request_id.rs  rollback.rs  security.rs  sequences.rs  sessions.rs  streaming.rs  telemetry.rs  test_harness.rs  triggers.rs  usage.rs  (+4 more)
orch8-api/src/instances/: artifacts.rs  audit.rs  bulk.rs  checkpoints.rs  fork.rs  inject.rs  lifecycle.rs  outputs.rs  signals.rs  timeline.rs  types.rs
orch8-api/tests/: api_coverage.rs  api_key_tenant_binding.rs  approvals.rs  cron.rs  diagnosis.rs  diagnosis_e2e.rs  dlq_groups.rs  dlq_groups_e2e.rs  events.rs  health.rs  inspect.rs  inspect_e2e.rs  instances.rs  mcp_server.rs  mobile_sync.rs  pools.rs  preflight.rs  preflight_e2e.rs  queue_dispatch.rs  releases.rs  releases_lifecycle_e2e.rs  resume_from.rs  rollback.rs  rollback_load.rs  security_hardening.rs  sequences.rs  signals.rs  streaming.rs  telemetry.rs  timeline_fork.rs  triggers_activepieces.rs  usage.rs  webhook_deliveries.rs  webhook_deliveries_e2e.rs  webhook_outbox.rs  workbench.rs  workbench_view_e2e.rs  workers.rs
orch8-cli/: Cargo.toml  build.rs
orch8-cli/src/: main.rs  templates.rs
orch8-cli/src/commands/: checkpoint.rs  config.rs  continuity.rs  cron.rs  dev.rs  dev_server.rs  health.rs  (+10 more)
orch8-engine/: Cargo.toml
orch8-engine/benches/: engine_bench.rs
orch8-engine/src/: ap_poll.rs  capsule.rs  circuit_breaker.rs  compensation.rs  continuity.rs  continuity_advanced.rs  credentials.rs  cron.rs  dataflow.rs  doctor.rs  effect_guard.rs  error.rs  evaluator.rs  evaluator.rs.orig  event_correlation.rs  expression.rs  externalized.rs  gc.rs  interceptors.rs  lib.rs  lifecycle.rs  lint.rs  metrics.rs  placement.rs  preflight.rs  preload.rs  push.rs  recovery.rs  release_diff.rs  required_fields.rs  scheduler.rs  sequence_cache.rs  signals.rs  step_logs.rs  stream_bus.rs  stream_windows.rs  template.rs  template_trace.rs  triggers.rs  webhooks.rs
orch8-engine/tests/: blob_e2e.rs  budget_coverage.rs  cancellation_scope_coverage.rs  capsule_e2e.rs  cleanup_hooks.rs  clock_virtual_time.rs  conditional_retry_e2e.rs  cron_dst.rs  cron_overlap.rs  doctor_cases.rs  e2e_coverage.rs  edge_cases_coverage.rs  engine_bugs_group_a.rs  engine_bugs_group_b.rs  engine_coverage.rs  evaluator_coverage.rs  event_correlation_flows.rs  expression_template_coverage.rs  feature_gaps.rs  flows_auto_test.rs  fork_e2e.rs  human_input_coverage.rs  internals_coverage.rs  loop_for_each_coverage.rs  loop_in_foreach.rs  new_features_031.rs  output_schema_e2e.rs  preflight_cases.rs  push_dispatch.rs  queue_routing.rs  race_parallel_coverage.rs  release_diff_cases.rs  resume_from_block_e2e.rs  router_coverage.rs  saga_e2e.rs  scheduler_coverage.rs  sla_breach.rs  step_logs.rs  template_debug_e2e.rs  template_trace_cases.rs  (+2 more)
orch8-grpc/: Cargo.toml  build.rs
orch8-grpc/src/: auth.rs  lib.rs  service.rs
orch8-grpc/tests/: e2e.rs
orch8-mobile/: Cargo.toml  uniffi.toml
orch8-mobile/src/: config.rs  continuity.rs  error.rs  handlers.rs  lib.rs  lifecycle.rs  notifier.rs  runtime.rs  storage.rs  sync.rs  sync_reporter.rs  telemetry.rs  tick_controller.rs
orch8-mobile/tests/: example_workflows.rs  integration.rs  mobile_coverage.rs
orch8-publisher/: Cargo.toml
orch8-publisher/src/: capsule.rs  cdn.rs  grant.rs  lib.rs  manifest.rs  package.rs  publish.rs  push.rs
orch8-publisher/tests/: package_cases.rs  package_e2e.rs  publisher_coverage.rs
orch8-push/: Cargo.toml
orch8-push/src/: apns.rs  fcm.rs  lib.rs
orch8-server/: Cargo.toml
orch8-server/src/: bench.rs  main.rs  telemetry.rs
orch8-storage/: Cargo.toml
orch8-storage/benches/: storage_bench.rs
orch8-storage/src/: api_key_cache.rs  artifacts.rs  compression.rs  encrypting.rs  externalizing.rs  lib.rs  postgres.rs  sqlite.rs
orch8-storage/tests/: bugs_group_b.rs  continuity_evidence_storage.rs  continuity_storage.rs  encrypting_coverage.rs  encryption_e2e.rs  migration_rollback.rs  postgres_integration.rs  review_fixes_2026_06.rs  security_hardening_2026_06.rs  storage_coverage.rs  storage_integration.rs  storage_refactoring_regressions.rs  webhook_deliveries.rs  webhook_nonce.rs
orch8-types/: Cargo.toml
orch8-types/src/: api_key.rs  artifact.rs  audit.rs  auth.rs  checkpoint.rs  circuit_breaker.rs  clock.rs  cluster.rs  config.rs  context.rs  continuity.rs  continuity_advanced.rs  contract.rs  credential.rs  cron.rs  dedupe.rs  diagnosis.rs  dlq.rs  encryption.rs  error.rs  event_correlation.rs  execution.rs  failure.rs  filter.rs  finding.rs  ids.rs  instance.rs  interceptor.rs  lib.rs  output.rs  plugin.rs  pool.rs  preflight.rs  queue_dispatch.rs  rate_limit.rs  redaction.rs  release.rs  rollback.rs  sequence.rs  session.rs  (+8 more)
orch8-types/tests/: contract_cases.rs  event_correlation_cases.rs  failure_fingerprint_cases.rs  redaction_cases.rs  release_cases.rs  types_coverage.rs  types_coverage_extra.rs  webhook_delivery_cases.rs
orch8/examples/: embedded_axum.rs  kill_resistant.rs  quickstart.rs
orch8/src/: builder.rs  contract.rs  engine.rs  error.rs  lib.rs  storage.rs
orch8/tests/: contract_runner_e2e.rs  engine.rs  event_correlation.rs
(+750 files in other folders)
