[workspace]
members = [
    "orch8-types",
    "orch8-storage",
    "orch8-engine",
    "orch8-api",
    "orch8-grpc",
    "orch8-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "BUSL-1.1"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs & time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging & metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# API
axum = "0.8"
tonic = "0.12"
prost = "0.13"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Configuration
clap = { version = "4", features = ["derive"] }
toml = "0.8"

# Async traits
async-trait = "0.1"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Misc
rand = "0.8"
cron = "0.15"
moka = { version = "0.12", features = ["future"] }
tikv-jemallocator = "0.6"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
