[workspace]
members = [
    "orch8-types",
    "orch8-storage",
    "orch8-engine",
    "orch8-api",
    "orch8-grpc",
    "orch8-server",
    "orch8-cli",
]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2021"
rust-version = "1.92"
license = "BUSL-1.1"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "json", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs & time
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging & metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# API
axum = "0.8"
tonic = "0.12"
prost = "0.13"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Configuration
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"

# Async traits
async-trait = "0.1"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Encryption
aes-gcm = "0.10"
base64 = "0.22"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
url = "2"

# Streaming
tokio-stream = "0.1"

# Misc
rand = "0.8.6"
cron = "0.15"
moka = { version = "0.12", features = ["future", "sync"] }
subtle = "2"
sha2 = "0.10"
tikv-jemallocator = "0.6"
async-nats = "0.47"
notify = { version = "8", features = ["serde"] }
wasmtime = "44"
dashmap = "6"

# Speed up debug builds: keep our own crates cheap to compile (opt-level 0)
# but build 3rd-party deps at opt-level 1. Big win for sqlx, tokio, axum
# etc. in E2E tests where we pay dep runtime cost on every server boot.
[profile.dev.package."*"]
opt-level = 1

# Release profile: optimise for runtime performance.
[profile.release]
lto = "thin"
codegen-units = 1

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
option_if_let_else = "allow"
