[package]
name = "orch8-api"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
orch8-types = { path = "../orch8-types" }
orch8 = { path = "../orch8" }
orch8-engine = { path = "../orch8-engine" }
orch8-storage = { path = "../orch8-storage" }
orch8-publisher = { path = "../orch8-publisher" }
orch8-push = { path = "../orch8-push" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
metrics-exporter-prometheus.workspace = true
uuid.workspace = true
chrono.workspace = true
utoipa.workspace = true
jsonschema.workspace = true
moka.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
url.workspace = true
hmac.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
bytes.workspace = true
base64.workspace = true
zeroize.workspace = true

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
