[package]
name = "orch8-cli"
version.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "orch8"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_complete = "4"
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal", "time"] }
tokio-util.workspace = true
reqwest = { workspace = true }
anyhow.workspace = true
rand.workspace = true
owo-colors = "4"
toml.workspace = true
tracing.workspace = true
axum.workspace = true
tower-http.workspace = true
orch8 = { path = "../orch8" }
orch8-types = { path = "../orch8-types" }
orch8-api = { path = "../orch8-api" }
orch8-storage = { path = "../orch8-storage" }
orch8-engine = { path = "../orch8-engine" }
orch8-push = { path = "../orch8-push" }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "migrate"] }
rust-embed = { version = "8", features = ["include-exclude"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
