[package]
name = "orch8-engine"
version.workspace = true
edition.workspace = true

[dependencies]
orch8-types = { path = "../orch8-types" }
orch8-storage = { path = "../orch8-storage" }
tokio.workspace = true
tokio-util.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
rand.workspace = true
metrics.workspace = true
cron.workspace = true
moka.workspace = true

[dev-dependencies]
tokio = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "engine_bench"
harness = false

[lints]
workspace = true
