[package]
name = "orch8-grpc"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
orch8-types = { path = "../orch8-types" }
orch8-storage = { path = "../orch8-storage" }
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
async-trait.workspace = true
tower.workspace = true

[dev-dependencies]
tokio-stream = "0.1"

[build-dependencies]
tonic-prost-build.workspace = true

[package.metadata.cargo-machete]
ignored = ["async-trait", "prost", "tonic-prost", "tonic-prost-build"]

[lints]
workspace = true
