[package]
name = "orch8-mobile"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
orch8-engine = { path = "../orch8-engine", default-features = false, features = ["embedded"] }
orch8-storage = { path = "../orch8-storage", default-features = false }
orch8-types = { path = "../orch8-types" }
uniffi = "0.32"
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
sqlx = { workspace = true }
rand = { workspace = true }

[build-dependencies]
uniffi = { version = "0.32", features = ["build"] }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "uniffi-bindgen"
required-features = ["bindgen"]

[features]
bindgen = ["uniffi/cli"]

[lints]
workspace = true
