[package]
name = "orch8-publisher"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
orch8-types = { path = "../orch8-types" }
reqwest = { workspace = true }
ed25519-dalek = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
hex = "0.4"
hmac.workspace = true
async-trait = { workspace = true }
zeroize.workspace = true

[dev-dependencies]
tokio = { workspace = true }
rand_core = "0.6"

[lints]
workspace = true
