[package]
name = "orch8-push"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
tracing.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
jsonwebtoken = "10"
chrono.workspace = true
tokio.workspace = true
urlencoding = "2"
zeroize.workspace = true

[lints]
workspace = true
