[package]
name = "orch8-server"
version.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "orch8-server"
path = "src/main.rs"

[[bin]]
name = "orch8-bench"
path = "src/bench.rs"

[dependencies]
orch8-types = { path = "../orch8-types" }
orch8-storage = { path = "../orch8-storage" }
orch8-engine = { path = "../orch8-engine" }
orch8-api = { path = "../orch8-api" }
orch8-grpc = { path = "../orch8-grpc" }
orch8-push = { path = "../orch8-push" }
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
clap.workspace = true
toml.workspace = true
anyhow.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
tonic.workspace = true
http = "1"
tikv-jemallocator.workspace = true

# OTLP trace export (feature `otlp`, on by default — opt out with
# `--no-default-features` for lean builds without the OpenTelemetry stack).
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[features]
default = ["otlp"]
# OpenTelemetry OTLP trace export (ORCH8_OTLP_ENDPOINT / [telemetry] otlp_endpoint).
otlp = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[lints]
workspace = true
