[package]
name = "orch8-storage"
version.workspace = true
edition.workspace = true

[dependencies]
orch8-types = { path = "../orch8-types" }
sqlx.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "storage_bench"
harness = false

[lints]
workspace = true
