[package]
name = "orch8-storage"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
orch8-types = { path = "../orch8-types" }
sqlx.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
object_store.workspace = true
futures.workspace = true
bytes.workspace = true
moka.workspace = true
# Already in the graph via sqlx; needed here for `tokio::spawn` of the
# fire-and-forget `last_used_at` touch on the auth hot path.
tokio = { workspace = true }
zstd = { version = "0.13", optional = true }

[features]
default = ["compression"]
compression = ["dep:zstd"]

[dev-dependencies]
tokio = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "storage_bench"
harness = false

[lints]
workspace = true
