[package]
name = "orch8-types"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
thiserror.workspace = true
sqlx.workspace = true
utoipa.workspace = true

[lints]
workspace = true
