[package]
name = "orch8-types"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
sqlx.workspace = true
utoipa.workspace = true
aes-gcm.workspace = true
base64.workspace = true
sha2.workspace = true
subtle.workspace = true
strsim = "0.11"

[lints]
workspace = true
